<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageSelect">

    <!--    создание тулбара (фиолетовый квадрат сверху)-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarLanguageSel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="670dp"
        android:background="#410FA3"
        app:layout_constraintBottom_toTopOf="@+id/title_mother_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/lang_sel"
        android:textColor="@color/white"
        android:textSize="20sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!--    выбор языка с кнопочками-->
    <TextView
        android:id="@+id/title_mother_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBarLanguageSel"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="624dp"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center"
        android:text="@string/sel_moth_lan"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/russian_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/sel_rus"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_mother_lang" />

    <Button
        android:id="@+id/english_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/sel_eng"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/russian_button" />

    <Button
        android:id="@+id/chinese_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/sel_chi"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english_button" />

    <Button
        android:id="@+id/belarus_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/sel_bela"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chinese_button" />

    <Button
        android:id="@+id/kazakh_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/fredoka_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/sel_kaz"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/belarus_button" />

    <Button
        android:id="@+id/choose_button"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_rounded_choose"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>