<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp1">

    <!--    создание тулбара (фиолетовый квадрат сверху)-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarSignUp1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="101dp"
        android:background="#410FA3"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!--    текст Creat An Accoun-->
    <TextView
        android:id="@+id/CreateAnAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/CreaAnAcc"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarSignUp1" />

    <!--    текст и ввод First Name-->
    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/FirstName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Your First Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAnAcc" />

    <!--    текст и ввод Last Name-->
    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:text="@string/LastName"
        android:textSize="15sp"
        android:fontFamily="@font/fredoka"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Your Last Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <!--    текст и ввод Email Address-->
    <TextView
        android:id="@+id/TextEmAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/EmAdr"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        android:textSize="15sp"
        android:fontFamily="@font/fredoka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <!--    забытая кнопка возращения-->
    <Button
        android:id="@+id/back_button_login"
        android:layout_width="26dp"
        android:layout_height="28dp"
        android:background="@drawable/login_back_button"
        android:onClick="onBackButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <!--    кнопка Continue-->
    <Button
        android:id="@+id/continue_button"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/button_rounded_choose"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/Continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    текст Already You Member-->
    <TextView
        android:id="@+id/TextAlrYouMem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:fontFamily="@font/fredoka"
        android:text="Already you member? "
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    текст-кнопка Login-->
    <TextView
        android:id="@+id/textButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/login"
        android:textColor="#5B7BFE"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/TextAlrYouMem" />

</androidx.constraintlayout.widget.ConstraintLayout>